[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.2"
native-tls = "0.2.11"
flate2 = "1.0.28"
regex = "1.5.4"
log = "0.4.21"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
lazy_static = "=1.4.0"